Budget Planner/force-app/main/default/objects/Budget__c/fields/Budget_Spent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Spent__c</fullName>
    <label>Budget Spent</label>
    <summarizedField>Budget_Category__c.Cost__c</summarizedField>
    <summaryForeignKey>Budget_Category__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>