Budget Planner/force-app/main/default/objects/Budget__c/validationRules/Allotted_Budget_should_not_be_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>Allotted_Budget_should_not_be_greater</fullName>
    <active>true</active>
    <description>Budget Spent Should not be greater than the total Budgte</description>
    <errorConditionFormula>Budget_Spent__c  &gt;  Total_Budget__c</errorConditionFormula>
    <errorMessage>Budget Spent Should not be greater than the total Budgtet</errorMessage>
</ValidationRule>