Budget Planner/force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Budget__c</columns>
    <columns>Budget_Spent__c</columns>
    <columns>Available_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>